sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:2: error: not found: value getNombreBase
  var n:Int = 2*getNombreBase()-1 //Nombre de joueurs.
                ^